# public-overheating-dashboard

./: .env  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements.txt
docs/: index.md
docs/reference/components/: dropdown.md  ids.md  index.md  sidebar.md
docs/reference/pages/: home_page.md  index.md  longterm_page.md  paragraph_text.md  shortterm_page.md  validation_page.md
docs/reference/utils/: common_functions.md  enums.md  loader.md  loss_functions.md  schema.md
scripts/: gen_ref_pages.py
site/: 404.html  index.html  objects.inv
site/reference/app/: index.html
site/reference/components/: index.html
site/reference/components/dropdown/: index.html
site/reference/components/ids/: index.html
site/reference/components/sidebar/: index.html
site/reference/pages/: index.html
site/reference/pages/home_page/: index.html
site/reference/pages/longterm_page/: index.html
site/reference/pages/paragraph_text/: index.html
site/reference/pages/shortterm_page/: index.html
site/reference/pages/validation_page/: index.html
site/reference/utils/: index.html
site/reference/utils/common_functions/: index.html
site/reference/utils/enums/: index.html
site/reference/utils/loader/: index.html
site/search/: search_index.json
src/: app.py
src/components/: dropdown.py  ids.py  sidebar.py
src/data/: simulation_output.csv  weather_data.csv
src/pages/: home_page.py  longterm_page.py  paragraph_text.py  shortterm_page.py  validation_page.py
src/utils/: common_functions.py  enums.py  loader.py  loss_functions.py  schema.py
(+2 files in other folders)
